--- a/index.html
+++ b/index.html
@@ -7,29 +7,40 @@
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
-    <h1>Group divisor</h1>
-    <p>Use this form to divide students into a certain amount of groups</p>
-    <form action="" method="POST">
-      <label for="names">First student name</label>
-      <input type="text" name="names" id="" />
-      <button class="add" type="submit" name="add">ADD STUDENT</button>
-      <button class="load" type="submit">LOAD THE LIST OF BEFORE</button>
+    <div class="wrapper">
+      <h2>Group divisor</h2>
+      <p>Use this form to divide students into a certain amount of groups</p>
+      <form class="firstform">
+        <label for="names">First student name</label>
+        <input type="text" name="names" class="names" />
+        <button class="add" type="submit" name="add">ADD STUDENT</button>
+        <span></span>
+        <button class="load" type="submit">LOAD THE LIST OF BEFORE</button>
+        <button class="load" type="submit" onclick="clean()">
+          ClEAN EVERYTHING
+        </button>
+        <!-- student list -->
 
-      <br />
-      <br />
-      <!-- student list -->
-      <label for="list">List of students</label>
-      <div class="list" name="list" contenteditable="true"></div>
-      <br />
-      <br />
-      <!-- group distribution -->
-      <label for="numStudents"> How many students per group?</label>
-      <input type="text" name="numStudents" id="" />
-      <button type="submit" class="makeGroups">Make groups</button>
-      <hr />
-      <h3>Group of students</h3>
-      <div class="finalGroup" contenteditable="true"></div>
-    </form>
+        <div class="list" name="list">
+          <label for="list">List of students</label>
+        </div>
+      </form>
+
+      <form id="groups-total">
+        <div class="number">
+          <!-- group distribution -->
+          <label for="numStudents"> How many students per group?</label>
+          <input type="text" name="numStudents" id="" />
+          <button type="submit" class="makeGroups">Make groups</button>
+        </div>
+      </form>
+      <div class="groups-result">
+        <h3>Group of students</h3>
+        <div class="finalGroup"></div>
+      </div>
+    </div>
+
     <script src="/script.js"></script>
+    <footer>Jojo inc 2020</footer>
   </body>
 </html>
