--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
         <button class="add" type="submit" name="add">ADD STUDENT</button>
         <span></span>
         <button class="load" type="submit">LOAD THE LIST OF BEFORE</button>
-        <button class="load" type="submit" onclick="clean()">
-          ClEAN EVERYTHING
-        </button>
+        <button class="clean" type="submit">CLEAN EVERYTHING</button>
         <!-- student list -->
         <div class="list" name="list">
           <label for="list">List of students</label>
